--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,9 @@
-<form action="/users" method="POST" accept-charset="UTF-8">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <label>Username:</label>
-  <input type="text" name="user[username]">
-  <label>Password:</label>
-  <input type="password" name="user[password]">
-  <label>E-Mail:</label>
-  <input type="email" name="user[email]">
-  <input type="submit" value="Submit">
-</form>
+<%= form_tag("/users", method: "post") do %>
+<%= label_tag(:username) %>
+<%= text_field_tag("user[:username]") %>
+<%= label_tag(:password) %>
+<%= password_field_tag("user[:password]") %>
+<%= label_tag(:email) %>
+<%= email_field_tag("user[:email]") %>
+<%= submit_tag('submit')%>
+<% end %>
